# BBEATSx

./: .gitignore  README.md  pyproject.toml  requirements.txt
bbeatsx/: README.md  __about__.py  __init__.py  blocks.py  config.py  features.py  forecast.py  interpret.py  model.py  sampler.py  serialization.py  sv.py
bbeatsx/backend/: __init__.py  _numpy_backend.py
examples/: quickstart.py
simulations/: 01_dgp1_linear.ipynb  01_dgp2_nonlinear_sv.ipynb  01_dgp3_structural_break.ipynb  01_dgp4_short_noisy.ipynb  01_dgp5_linear_covariate.ipynb  01_dgp6_nonlinear_covariate.ipynb  02_ablation_studies.ipynb  03_mcmc_diagnostics.ipynb  utils.py
tests/: conftest.py  test_backfitting_invariant.py  test_features.py  test_forecast.py  test_golden.py  test_seasonal_recovery.py  test_sigma_coverage.py  test_sv.py  test_trend_recovery.py  test_variants.py
